[package]
name = "dns_audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
regex = "1"
base64 = "0.21"
unicase = "2"
ascii = "1"
arrayvec = "0.7"
lazy_static = "1"
dns-lookup = "2"
serde_json = "1"
serde = "1"
serde_derive = "1"
